--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -1,5 +1,7 @@
  .navbar {
-     background-color: rgba(0, 0, 0, 0.269);
+    position: fixed;
+    width: 100vw;
+    background-color: rgb(112, 111, 111);
     padding-left: 5%;
 
  }
@@ -9,5 +11,4 @@
      align-items: flex-end;
      display: flex;
      padding-right: 5%;
-
  }
