--- a/src/components/styles/Banner.module.css
+++ b/src/components/styles/Banner.module.css
@@ -71,10 +71,9 @@
   }
   .infoBtn{
     border-radius: 15px;
-    padding: 2px;
     font-size: 1rem;
-    width: 10px;
-    height: 25px;
+    width: 25%;
+    height: 7%;
   }
 
   .title{
@@ -82,9 +81,9 @@
   }
 
   .description{
-    width: 25%;
+    width: 50%;
     height: 50%;
-    overflow: hidden;
+    
   }
 
 }
