added styling throughout the site
work collaboratively with my beloved teammates, Ryan and Rob

--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -1,9 +1,9 @@
  .navbar {
     position: fixed;
     width: 100vw;
-    background-color: rgb(112, 111, 111);
+    background-color: rgba(17, 17, 17, 0.872);
     padding-left: 5%;
-
+    height: 3rem;
  }
 
  .menu {
