--- a/src/components/styles/Row.module.css
+++ b/src/components/styles/Row.module.css
@@ -1,8 +1,29 @@
 .row {
   color: white;
   height: fit-content;
+  margin-left:3%;
+  padding:2% 0 2% 0;
 }
 
 .link {
-  /* text-decoration: none; */
+  text-decoration: none;
+  color: #111;
+  transition: all 0.2s ease-in-out;
+}
+.link:hover{
+  text-decoration: none;
+  color: #111;
+  transform: scale(1.05);
+  
+  /* background: linear-gradient(45deg, #ffd800, #ff5520, #750cf2, #0cbcf2 ); */
+
+  box-shadow: 
+  inset 0 0 5px #fff, /* inner white */ 
+  inset 2px 0 8px #f0f, /* inner left magenta short */ 
+  inset -2px 0 8px #0ff,/* inner right cyan short */ 
+  inset 2px 0 30px #f0f, /* inner left magenta broad */ 
+  inset -2px 0 30px #0ff,/* inner right cyan broad */ 
+  0 0 5px #fff, /* outer white */ 
+  -1px 0 8px #f0f, /* outer left magenta */ 
+  1px 0 8px #0ff; /* outer right cyan */
 }
