--- a/src/components/styles/Banner.module.css
+++ b/src/components/styles/Banner.module.css
@@ -22,27 +22,45 @@
   background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 60%, rgba(0,0,0,0) 100%);
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
+  padding-left: 2%;
+}
+
+.originalLeft {
+  margin-bottom: 5.5%;
+  color: white;
+  font-weight: 800;
+}
+
+.originalRight{
+  font-weight: 250;
 }
 
 .infoBtn {
   width: 20%;
-  border-radius: 25px;
-  color: black;
-  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  color: white;
+  background-color: rgba(212, 45, 45, 0.8);;
   margin-top: 0;
 }
 .infoBtn:hover {
   width: 20%;
-  border-radius: 25px;
-  color: red;
-  background-color: rgb(0, 0, 0, .8);
+  border-radius: 5px;
+  color: green;
+  background-color: black;
 }
 
 .title{
-  font-size: 2.4rem;
+  display: flex;
+  justify-content: center;
+  font-size: 2.3rem;
   color: white;
   /* border: 2px solid red; */
   width: 70%;
+  text-transform: uppercase;
+  transform: scaleY(2.0);
+  line-height: 2.3rem;
+  margin-bottom: 10%;
+  font-weight: 800;
 }
 
 .descriptionContainer {
@@ -53,15 +71,69 @@
   font-size: 1rem;
   width: 70%;
   height: 100%;
-  /* background-color: rgb(0, 0, 0, .6); */
   color: white;
   border-radius: 15px;
-  padding-left: 21px;
   overflow: hidden;
 }
 
 .bannerButtons {
   /* border: 2px solid blue; */
+}
+
+.randomInfo {
+  display: flex;
+  justify-content: space-between;
+  /* border: 2px solid red; */
+  height: 3%;
+  width: 66%;
+  color: rgb(160, 160, 160);
+  margin-bottom: 2%;
+}
+
+
+.match {
+  display: flex;
+  justify-content: center;
+  width: 20%;
+  color: green;
+  font-size: 0.8rem;
+}
+
+.year {
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid blue; */
+  width: 15%;
+  font-size: 0.8rem;
+}
+
+.seasons {
+  display: flex;
+  justify-content: center;
+  /* border: 2px solid green; */
+  width: 20%;
+  font-size: 0.8rem;
+}
+
+.ultraHd {
+  border: 1px solid white;
+  width: 23%;
+  margin-right: 1%;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.modelNumber {
+  display: flex;
+  justify-content: center;
+  border: 1px solid white;
+  width: 10%;
+  font-size: 0.8rem;
+  border-radius: 5px;
+  font-weight: 700;
 }
 
 
